# lucide-icons-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build-docker.yaml  publish-crate-versions.yaml
src/: cli.rs  codegen.rs  generate.rs  github.rs  info.rs  log.rs  main.rs
